1.Added two classes: InvoiceLineService and InvoiceService and move business logic into these two classes. 2. debug swagger UI
